[es-MX] update from Pootle (firefox)

--- a/es-MX/browser/chrome/browser/loop/loop.properties
+++ b/es-MX/browser/chrome/browser/loop/loop.properties
@@ -239,7 +239,7 @@ connection_error_see_console_notification=La llamada falló; ve la consola para 
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
 ## by the brand name, or fall back to client_shortname_fallback
-legal_text_and_links3=Al usar {{clientShortname}} aceptas los {{terms_of_use}} \\ y el {{privacy_notice}}.
+legal_text_and_links3=Al usar {{clientShortname}} aceptas los {{terms_of_use}} y la {{privacy_notice}}.
 legal_text_tos = Términos de uso
 legal_text_privacy = Política de privacidad
 client_shortname_fallback=este producto
@@ -249,7 +249,7 @@ feedback_what_makes_you_sad=¿Qué cosas te ponen triste?
 feedback_thank_you_heading=¡Gracias por tu opinión!
 feedback_category_audio_quality=Calidad del sonido
 feedback_category_video_quality=Calidad del video
-feedback_category_was_disconnected=Se ha desconectado
+feedback_category_was_disconnected=Se desconectó
 feedback_category_confusing=Confusa
 feedback_category_other=Otros:
 feedback_custom_category_text_placeholder=¿Qué sucedió?
