--- a/es-MX/browser/chrome/browser/shellservice.properties
+++ b/es-MX/browser/chrome/browser/shellservice.properties
@@ -7,6 +7,7 @@ safeModeLabel=%S Modo &seguro
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Saca el máximo de %S fijándolo como tu navegador predeterminado
 setDefaultBrowserConfirm.label     = Usar %S como mi navegador por defecto
 setDefaultBrowserConfirm.accesskey = U
 setDefaultBrowserOptions.label     = Opciones
