--- a/es-MX/security/manager/chrome/pipnss/nsserrors.properties
+++ b/es-MX/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=La contraseña está bloqueada.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Error PKCS #11 desconocido.
 SEC_ERROR_BAD_CRL_DP_URL=URL no válida o no admitida en el nombre del punto de distribución de la CRL.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=El certificado se firmó usando un algoritmo de firma que está desactivado porque no es seguro.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Este servidor usa key pinning (HPKP) pero no se ha podido construir una cadena de certificados confiables que coincida con el pinset. Las violaciones de key pinning no se pueden solventar.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=El servidor usa un certificado con una extensión básica de restricciones que lo identifica como autoridad de certificación. Esto no debería ser el caso para un certificado emitido correctamente.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=El servidor ha presentado un certificado con un tamaño de clave que es demasiado pequeño para establecer una conexión segura.
