[fa] update from Pootle (firefox)

--- a/fa/browser/branding/official/brand.properties
+++ b/fa/browser/branding/official/brand.properties
@@ -6,7 +6,7 @@ brandShortName=فایرفاکس
 brandFullName=موزیلا فایرفاکس
 vendorShortName=موزیلا
 
-homePageSingleStartMain=صفحه‌ی شروع فایرفاکس، سریع همراه با جست‌و‌جو
+homePageSingleStartMain=صفحه‌ شروع فایرفاکس، سریع همراه با جست‌و‌جو
 homePageImport=وارد کردن صفحه‌ی اصلی از %S
 
 homePageMigrationPageTitle=انتخاب صفحه‌‌ی اصلی
