[hi-IN] update from Pootle (firefox)

--- a/hi-IN/browser/chrome/browser/newTab.properties
+++ b/hi-IN/browser/chrome/browser/newTab.properties
@@ -8,6 +8,7 @@ newtab.block=यह साइट हटाएँ
 # LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
 # and enhanced tiles on the same line as the tile's title, so prefer short
 # strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=SPONSORED
 # LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
@@ -16,6 +17,7 @@ newtab.block=यह साइट हटाएँ
 # an active link using string newtab.learn.link as text.
 # LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
 # active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=जब आप नया टैब खोलते है,आप टाइल्स देखते हैं साइट्स से जिन्हें आपने प्रायः मुआयना किया है,और जो हम सोचते हैं की आपकी रूचि के लायक है.कुछ टाइल्स के प्रायोजक Mozilla साथी हो सकते है .हम हमेशा आपको संकेत देंगे कौन से टाइल्स प्रायोजित हैं.%1$S
 # LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
 # active link using string newtab.privacy.link as text.
 # LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
