--- a/hi-IN/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hi-IN/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,4 +97,7 @@ quit-button.tooltiptext.linux2 = बाहर निकलें %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = बाहर निकलें %1$S (%2$S)
 
+panic-button.label = भूलें
 
+loop-call-button.label = बात करने के लिए किसी को आमंत्रित करें
+loop-call-button.tooltiptext = बात करने के लिए किसी को आमंत्रित करें
