--- a/hi-IN/browser/chrome/browser/devtools/storage.properties
+++ b/hi-IN/browser/chrome/browser/devtools/storage.properties
@@ -49,18 +49,26 @@ tree.labels.cookies=कूकीज
 table.headers.cookies.name=नाम
 table.headers.cookies.path=पथ
 table.headers.cookies.host=डोमेन
+table.headers.cookies.creationTime=को तैयार किया गया
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
 # cookie is HTTP only or not.
+table.headers.cookies.isHttpOnly=isHttpOnly
 # LOCALIZATION NOTE (table.headers.cookies.isSecure):
 # This string is used in the header for the column which denotes whether a
 # cookie can be accessed via a secure channel only or not.
+table.headers.cookies.isSecure=isSecure
 # LOCALIZATION NOTE (table.headers.cookies.isDomain):
 # This string is used in the header for the column which denotes whether a
 # cookie is a domain cookie only or not.
+table.headers.cookies.isDomain=isDomain
 
+table.headers.localStorage.name=कुंजी
 
+table.headers.sessionStorage.name=कुंजी
 
+table.headers.indexedDB.db=डेटाबेस का नाम
+table.headers.indexedDB.origin=उकाम
 table.headers.indexedDB.version=संस्करण
 
 # LOCALIZATION NOTE (label.expires.session):
