--- a/hi-IN/dom/chrome/security/csp.properties
+++ b/hi-IN/dom/chrome/security/csp.properties
@@ -67,6 +67,7 @@ scriptFromStringBlocked = किसी स्ट्रिंग से जाव
 hostNameMightBeKeyword = %1$S को बतौर मेजबाननाम रोक रहा है, न कि कुँजीपट. यदि आप इसे बीजशब्द मानना चाहते हैं, '%2$S' (एकल उद्धरण में लपेटा गया) का उपयोग करें.
 # LOCALIZATION NOTE (notSupportingDirective):
 # directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = कोई समर्थित सुझाव नही '%1$S'. सुझाव और मुल्य नजरअन्दाज किये जा सकते हैं.\u0020
 
 # CSP Errors:
 policyURINotAlone = policy-uri केवल अकेले प्रकट हो सकता है
