[hy-AM] update from Pootle (firefox)

--- a/hy-AM/browser/chrome/browser/browser.properties
+++ b/hy-AM/browser/chrome/browser/browser.properties
@@ -100,6 +100,8 @@ popupShowPopupPrefix=Ցուցադրել '%S'
 
 # Bad Content Blocker Doorhanger Notification
 # %S is brandShortName
+badContentBlocked.blocked.message=%S-ը արգելափակում է այս էջի պարունակությունը:
+badContentBlocked.notblocked.message=%S-ը արգելափակում է այս էջի ամբողջ բովանդակությունը:
 
 # missing plugin installer
 installPlugin.message = Ցանկանու՞մ եք տեղակայել անհրաժեշտ բաղադրիչը տվյալ էջում մեդիան դիտելու համար:               \u0020
@@ -120,7 +122,11 @@ crashedpluginsMessage.learnMore=Իմանալ Ավելին…
 # a local host page, by the time the DNS request recognizes it, we have already
 # loaded a search page for the given word.  An infobar then asks to the user
 # whether he rather wanted to visit the host.  %S is the recognized host.
+keywordURIFixup.message=Անցնե՞լ %S-ին:
+keywordURIFixup.goTo=Այո, տա՛ր ինձ %S
+keywordURIFixup.goTo.accesskey=Y
 keywordURIFixup.dismiss=Ոչ, շնորհակալ եմ
+keywordURIFixup.dismiss.accesskey=N
 
 ## Plugin doorhanger strings
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
@@ -444,7 +450,9 @@ webapps.requestInstall = Տեղակայե՞լ "%1$S"-ը (%2$S) կայքից։
 webapps.install.success = Տեղակայված ծրագրերը
 webapps.install.inprogress = Տեղադրվում է
 webapps.uninstall = Հեռացնել
+webapps.uninstall.accesskey = U
 webapps.doNotUninstall = Չտեղակայել
+webapps.doNotUninstall.accesskey = D
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 webapps.requestUninstall = Ցանկանու՞մ եք տեղակայել "%1$S"-ը։
 
@@ -507,21 +515,34 @@ getUserMedia.shareMicrophone.message = Թույլատրե՞լ %S-ին մուտք
 getUserMedia.shareScreen.message = Թույլատրե՞լ %S-ին մուտքը ձեր ապարատին:
 getUserMedia.shareCameraAndMicrophone.message = Թույլատրե՞լ %S-ին մուտքը ձեր ապարատին և բարձրախոսին:
 getUserMedia.shareScreenAndMicrophone.message = Թույլատրե՞լ %S-ին մուտքը ձեր բարձրախոսին:
+getUserMedia.selectWindow.label=Պատուհանը, որը կտարածվի.
+getUserMedia.selectWindow.accesskey=Պ
+getUserMedia.selectScreen.label=Էկրանը, որը կտարածվի.
+getUserMedia.selectScreen.accesskey=Է
+getUserMedia.selectApplication.label=Հավելված, որը կտարածվի.
+getUserMedia.selectApplication.accesskey=Հ
 getUserMedia.noVideo.label = Չկա տեսապատկեր
 getUserMedia.noApplication.label = Չկա ծրագիր
+getUserMedia.noScreen.label = Չկա էկրան
 getUserMedia.noWindow.label = Նոր Պատուհան
 getUserMedia.noAudio.label = Չկա ձայն
+getUserMedia.shareEntireScreen.label = Ամբողջական էկրան
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # Replacement for #1 is the name of the application.
 # Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 պատուհան);#1 (#2 պատուհաններ)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
 getUserMedia.shareSelectedDevices.label = Տարածել ընտրված սարքը;Տարածել ընտրված սարքերը
 getUserMedia.shareSelectedDevices.accesskey = Տ
+getUserMedia.shareScreen.label = Տարածել էկրանը
+getUserMedia.shareApplication.label = Տարածել նշված հավելվածը
+getUserMedia.shareWindow.label = Տարածել նշված պատուհանը
+getUserMedia.shareSelectedItems.label = Տարածել նշված տարրերը
 getUserMedia.always.label = Միշտ տարածել
 getUserMedia.always.accesskey = Մ
 getUserMedia.denyRequest.label = Չտարածել
@@ -531,11 +552,16 @@ getUserMedia.never.accesskey = Ե
 getUserMedia.sharingCamera.message2 = Այժմ դուք թույլատրել եք մուտքը ձեր ապարատին:
 getUserMedia.sharingMicrophone.message2 = Այժմ դուք թույլատրել եք մուտքը ձեր բարձրախոսին:
 getUserMedia.sharingCameraAndMicrophone.message2 = Այժմ դուք թույլատրել եք մուտքը ձեր ապարատին և բարձրախոսին այս էջում:
+getUserMedia.sharingApplication.message = Այժմ դուք թույլատրել եք մուտքը ձեր ապարատին:
+getUserMedia.sharingScreen.message = Այժմ դուք թույլատրել եք մուտքը ձեր ապարատին:
+getUserMedia.sharingWindow.message = Այժմ դուք թույլատրել եք մուտքը ձեր ապարատին:
 getUserMedia.continueSharing.label = Շարունակել տարածումը
 getUserMedia.continueSharing.accesskey = Շ
 getUserMedia.stopSharing.label = Կանգնեցնել տարածումը
 getUserMedia.stopSharing.accesskey = Կ
 
+getUserMedia.sharingMenu.label = Սարքերը տարածող ներդիրներ
+getUserMedia.sharingMenu.accesskey = Ս
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
 #                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
 #                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
@@ -547,8 +573,21 @@ getUserMedia.stopSharing.accesskey = Կ
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
 # %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (ապարատ)
+getUserMedia.sharingMenuMicrophone = %S (խոսափող)
+getUserMedia.sharingMenuApplication = %S (հավելված)
+getUserMedia.sharingMenuScreen = %S (էկրան)
+getUserMedia.sharingMenuWindow = %S (պատուհան)
+getUserMedia.sharingMenuCameraMicrophone = %S (ապարատ և խոսափող)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (ապարատ, խոսափող և հավելված)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (ապարատ, խոսափող և էկրան)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (ապարատ, խոսափող և պատուհան)
+getUserMedia.sharingMenuMicrophoneApplication = %S (խոսափող և հավելված)
+getUserMedia.sharingMenuMicrophoneScreen = %S (խոսափող և էկրան)
+getUserMedia.sharingMenuMicrophoneWindow = %S (խոսափող և պատուհան)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = Անհայտ ծագում
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S-ը կարծես դանդաղ է… բացվում:
