--- a/hy-AM/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hy-AM/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,4 +97,8 @@ quit-button.tooltiptext.linux2 = Փակել %1$S (%2$S)-ը
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Փակել %1$S (%2$S)-ը
 
+panic-button.label = Մոռանալ
+panic-button.tooltiptext = Մոռանալ դիտարկման որոշ պատմությունը
 
+loop-call-button.label = Հրավիրել զրույցի
+loop-call-button.tooltiptext = Հրավիրել զրույցի
