--- a/hy-AM/browser/chrome/browser/devtools/toolbox.properties
+++ b/hy-AM/browser/chrome/browser/devtools/toolbox.properties
@@ -37,6 +37,7 @@ toolbox.defaultTitle=Ծրագրավորողի գործիքներ
 
 # LOCALIZATION NOTE (toolbox.label): This is used as the label for the
 # toolbox as a whole
+toolbox.label=Ծրագրավորողի գործիքներ
 
 # LOCALIZATION NOTE (optionsButton.tooltip): This is used as the tooltip
 # for the options panel tab.
