--- a/hy-AM/browser/chrome/browser/devtools/webide.properties
+++ b/hy-AM/browser/chrome/browser/devtools/webide.properties
@@ -20,6 +20,7 @@ notification_showTroubleShooting_label=Խափանաշտկում
 # Variable: error message (in english)
 
 addons_stable=աղյուսակ
+addons_unstable=անկայուն
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
 # a given simulator version in the "Manage Simulators" pane.  %1$S: Firefox OS
 # version in the simulator, ex. 1.3.  %2$S: Simulator stability label, ex.
@@ -29,6 +30,9 @@ addons_uninstall_button=ջնջել
 addons_status_installed=Տեղադրվեց
 addons_status_preparing=Նախապատրաստում
 addons_status_downloading=Բեռնվում է
+addons_status_installing=տեակայում
 
+runtimedetails_checkunkown=անհայտ
 
 # Validation status
+status_error=ՍԽԱԼՆԵՐ
