--- a/hy-AM/browser/chrome/browser/loop/loop.properties
+++ b/hy-AM/browser/chrome/browser/loop/loop.properties
@@ -33,13 +33,19 @@
 ## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
 ## the appropriate action.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
+retry_button=Կրկնել
 
 ## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
+share_button=Էլ. Փոստ
 copy_url_button=Պատճենել
 
 
+settings_menu_item_account=Հաշիվ
+settings_menu_item_settings=Կարգավորումներ
+settings_menu_item_signout=Դուրս գրվել
 settings_menu_item_signin=Մտնել
+settings_menu_button_tooltip=Կարգավորումներ
 
 # Contact Strings (Panel)
 
@@ -55,6 +61,8 @@ contacts_search_placesholder=Որոնում…
 ## These are the placeholders for the fields for entering a new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Անուն
+new_contact_email_placeholder=Էլ. Փոստ
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -62,12 +70,14 @@ contacts_search_placesholder=Որոնում…
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
+valid_email_text_description=Մուտքագրեք էլ. փոստի ճիշտ հասցե
 
 ## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
 ## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## for where these appear on the UI
+import_contacts_button=Ներմուծում
 importing_contacts_progress_button=Ներմուծվում է…
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
@@ -85,8 +95,10 @@ importing_contacts_progress_button=Ներմուծվում է…
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
+confirm_delete_contact_alert=Իրո՞ք ցանկանում եք այս կոնտակտը հեռացնել:
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_cancel_button=Չեղարկել
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
@@ -104,6 +116,8 @@ importing_contacts_progress_button=Ներմուծվում է…
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These fields are display when the Edit Contact button is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_name_label=Անուն
+edit_contact_email_label=Էլ. Փոստ
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
@@ -120,6 +134,7 @@ edit_contact_done_button=Պատրաստ է
 
 # Conversation Window Strings
 
+incoming_call_cancel_button=Չեղարկել
 incoming_call_block_button=Արգելել
 hangup_button_caption2=Փակել
 
@@ -131,10 +146,12 @@ hangup_button_caption2=Փակել
 # Outgoing conversation
 
 initiate_audio_video_call_button2=Սկսել
+initiate_call_cancel_button=Չեղարկել
 
 ## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
 ## whilst the client is contacting the client at the other end of the connection
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_connecting_description=Կապակցում...
 ## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
 ## when the other client is actually ringing.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
@@ -151,16 +168,18 @@ initiate_audio_video_call_button2=Սկսել
 ## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=Կրկնել
 email_link_button=Հղումը ուղարկել էլ. փոստով
+cancel_button=Չեղարկել
 
 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
 ## by the brand name, or fall back to client_shortname_fallback
-  and {{privacy_notice}}.
 legal_text_privacy = Գաղտնիության Դրույթները
 
+feedback_category_other=Այլ
 ## LOCALIZATION NOTE (feedback_window_will_close_in2):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
