--- a/hy-AM/browser/chrome/browser/shellservice.properties
+++ b/hy-AM/browser/chrome/browser/shellservice.properties
@@ -9,6 +9,8 @@ safeModeLabel=%S-ի &Հուսալի Աշխատակերպ
 # %S will be replaced by brandShortName
 setDefaultBrowserOptions.label     = Կարգավորումներ
 setDefaultBrowserOptions.accesskey = Կ
+setDefaultBrowserNotNow.label      = Ոչ Հիմա
+setDefaultBrowserNotNow.accesskey  = Ո
 setDefaultBrowserNever.label       = Այլևս չհարցնել
 setDefaultBrowserNever.accesskey   = Ա
 
