--- a/hy-AM/dom/chrome/accessibility/AccessFu.properties
+++ b/hy-AM/dom/chrome/accessibility/AccessFu.properties
@@ -7,12 +7,72 @@ screenReaderStarted = Սկսել էկրանից ընթերցումը
 screenReaderStopped = Ավարտել էկրանից ընթերցումը
 
 # Roles
+menubar        =       ցանկ վահանակը
+scrollbar      =       ոլորագոտի
+grip           =       grip
+alert          =       տագնապ
+menupopup      =       ելնող ընտրացանկ
+document       =       փաստաթուղթ
+pane           =       վահանակ
+dialog         =       պատուհան
+separator      =       բաժանիչ
+toolbar        =       գործիքների վահանակ
+statusbar      =       կարգավիճակի տող
 table          =       աղյուսակ
+columnheader   =       սյան էջագլուխ
+rowheader      =       տողի էջագլուխ
+column         =       սյուն
+row            =       տող
+cell           =       բջիջ
 link           =       հղում
+list           =       ցանկ
+listitem       =       ցանկի տարրը
+outline        =       շրջանակ
+outlineitem    =       շրջանակի տարրը
+pagetab        =       ներդիրը
+propertypage   =       հատկության էջը
+graphic        =       գրաֆիկա\u0020
 pushbutton     =       կոճակ
+checkbutton    =       նշելու կոճակ
+radiobutton    =       ռադիոկոճակ
+combobox       =       կոմբոպատուհան
+progressbar    =       կատարման վահանակ
+slider         =       սահիչ
+spinbutton     =       պտտման կոճակ
+diagram        =       գծանկար
+animation      =       շարժապատկերում
+equation       =       հավասարեցում
+buttonmenu     =       ցանկի կոճակը
+whitespace     =       բացատ
+pagetablist    =       ներդիրների ցանկը
+canvas         =       կտավ
+checkmenuitem  =       նշատուփերի տարր
+label          =       պիտակ
 passwordtext   =       գաղտնաբառի տեքստը
+radiomenuitem  =       ռադիոցանկի տարր
+textcontainer  =       տեքստի պարունակ
+togglebutton   =       փոխանջատիչ կոճակ
+treetable      =       ծառի աղյուսակը
+header         =       էջագլուխ
+footer         =       էջատակ
+paragraph      =       պարբերություն
+entry          =       գրառում
+caption        =       վերնագիր
+heading        =       գլխամաս
+section        =       բաժին
+form           =       ձև
+comboboxlist   =       կոմբո պատուհանի ցանկ
+comboboxoption =       կոմբոպատուհանի ընտրանք
 imagemap       =       նկարի քարտեզ
+listboxoption  =       ընտրանք
+listbox        =       ցանկի պատուհան
+flatequation   =       հարթ կառավարում
+gridcell       =       ցանցի բջիջ
+note           =       նշում
 figure         =       պատկեր
+definitionlist =       որոշիչների ցանկը
+term           =       տերմին
+definition     =       որոշիչ
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       տեքսի դաշտը
@@ -37,6 +97,7 @@ listItemsCount =       1 տարր;#1 տարր
 # LOCALIZATION NOTE: # %1$S is the position of the item n the set.
 # %2$S is the total number of such items in the set.
 # An expanded example would read "2 of 5".
+objItemOfN      =       %1$S-ը %2$S-ից
 
 # Landmark announcements
 banner         =       բաններ
@@ -49,9 +110,11 @@ search         =       փնտրել
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblColumnInfo = 1 սյունով;#1 սյուներով
 # LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
 # Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblRowInfo = և 1 տող;և #1 տողեր
 
 # table or grid cell information
 columnInfo = Սյուն %S
@@ -123,12 +186,72 @@ quicknav_Table       = Աղյուսակներ
 quicknav_Checkbox    = Նշատուփեր
 
 # Shortened role names for braille
+menubarAbbr        =       ցանկի վահանակը
+scrollbarAbbr      =       ոլորագոտի
+gripAbbr           =       grip
+alertAbbr          =       տագնապ
+menupopupAbbr      =       ելնող ընտրացանկ
+documentAbbr       =       փաստաթուղթ
+paneAbbr           =       վահանակ
+dialogAbbr         =       պատուհան
+separatorAbbr      =       բաժանիչ
+toolbarAbbr        =       գործիքների վահանակ
+statusbarAbbr      =       կարգավիճակի տող
 tableAbbr          =       tbl
+columnheaderAbbr   =       սյան էջագլուխ
+rowheaderAbbr      =       տողի էջագլուխ
+columnAbbr         =       սյուն
+rowAbbr            =       տող
+cellAbbr           =       բջիջ
 linkAbbr           =       lnk
+listAbbr           =       ցանկ
+listitemAbbr       =       ցանկի տարրը
+outlineAbbr        =       շրջանակ
+outlineitemAbbr    =       շրջանակի տարրը
+pagetabAbbr        =       ներդիրը
+propertypageAbbr   =       հատկության էջը
+graphicAbbr        =       գրաֆիկա\u0020
 pushbuttonAbbr     =       btn
+checkbuttonAbbr    =       նշումով կոճակ
+radiobuttonAbbr    =       ռադիոկոճակ
+comboboxAbbr       =       կոմբոպատուհան
+progressbarAbbr    =       կատարման վահանակ
+sliderAbbr         =       սահիչ
+spinbuttonAbbr     =       պտտման կոճակ
+diagramAbbr        =       գծանկար
+animationAbbr      =       շարժապատկերում
+equationAbbr       =       հավասարեցում
+buttonmenuAbbr     =       ցանկի կոճակը
+whitespaceAbbr     =       բացատ
+pagetablistAbbr    =       ներդիրների ցանկը
+canvasAbbr         =       կտավ
+checkmenuitemAbbr  =       նշատուփերի տարր
+labelAbbr          =       պիտակ
 passwordtextAbbr   =       passwdtxt
+radiomenuitemAbbr  =       ռադիոցանկի տարր
+textcontainerAbbr  =       տեքստի պարունակ
+togglebuttonAbbr   =       փոխանջատիչ կոճակ
+treetableAbbr      =       ծառի աղյուսակը
+headerAbbr         =       էջագլուխ
+footerAbbr         =       էջատակ
+paragraphAbbr      =       պարբերություն
+entryAbbr          =       գրառում
+captionAbbr        =       վերնագիր
+headingAbbr        =       գլխամաս
+sectionAbbr        =       բաժին
+formAbbr           =       ձև
+comboboxlistAbbr   =       կոմբո պատուհանի ցանկ
+comboboxoptionAbbr =       կոմբոպատուհանի ընտրանք
 imagemapAbbr       =       imgmap
+listboxoptionAbbr  =       ընտրանք
+listboxAbbr        =       ցանկի պատուհան
+flatequationAbbr   =       հարթ կառավարում
+gridcellAbbr       =       ցանցի բջիջ
+noteAbbr           =       նշում
 figureAbbr         =       fig
+definitionlistAbbr =       որոշիչների ցանկը
+termAbbr           =       տերմին
+definitionAbbr     =       որոշիչ
 textareaAbbr       =       txtarea
 
 # LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
@@ -141,3 +264,7 @@ tblColumnInfoAbbr = #1c;#1c
 tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
 
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
