--- a/hy-AM/dom/chrome/dom/dom.properties
+++ b/hy-AM/dom/chrome/dom/dom.properties
@@ -38,10 +38,13 @@ FormValidationNumberRangeOverflow=Ընտրեք %S-ից ոչ ցածր արժեք:
 # LOCALIZATION NOTE (FormValidationDateRangeOverflow): %S is a date.
 FormValidationDateRangeOverflow=Ընտրեք %S-ից ոչ ցածր արժեք:
 # LOCALIZATION NOTE (FormValidationTimeRangeOverflow): %S is a time.
+FormValidationTimeRangeOverflow=Ընտրեք %S-ից ոչ ցածր արժեք:
 # LOCALIZATION NOTE (FormValidationNumberRangeUnderflow): %S is a number.
 FormValidationNumberRangeUnderflow=Ընտրեք %S-ից ոչ ցածր արժեք:
 # LOCALIZATION NOTE (FormValidationDateRangeUnderflow): %S is a date.
+FormValidationDateRangeUnderflow=Ընտրեք %S-ից ոչ ցածր արժեք:
 # LOCALIZATION NOTE (FormValidationTimeRangeUnderflow): %S is a time.
+FormValidationTimeRangeUnderflow=Ընտրեք %S-ից ցածր արժեք:
 # LOCALIZATION NOTE (FormValidationStepMismatch): both %S can be a number, a date or a time.
 FormValidationStepMismatch=Ընտրեք ճիշտ արժեք: Մոտակա ճիշտ արժեքներն են՝ %S և %S:
 # LOCALIZATION NOTE (FormValidationStepMismatchOneValue): %S can be a number, a date or a time. This is called instead of FormValidationStepMismatch when the second value is the same as the first.
@@ -168,12 +171,23 @@ SendAsBinaryWarning=Ոչ ստանդարտ sendAsBinary եղանակը առարկ
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "SelectMedia" and "MediaSelect".
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaNextTrack" and "MediaTrackNext".
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaPreviousTrack" and "MediaTrackPrevious".
+KeyNameMediaPreviousTrackWarning=KeyboardEvent.key "MediaPreviousTrack" արժեքը հնացել է և կանվանափոխվի "MediaTrackPrevious": Մանրամասներ՝ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Red" and "ColorF0Red".
+KeyNameRedWarning=KeyboardEvent.key "Red" արժեքը հնացել է և կանվանափոխվի "ColorF0Red": Մանրամասները՝ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Green" and "ColorF1Green".
+KeyNameGreenWarning=KeyboardEvent.key "Green" արժեքը հնացել է և կանվանափոխվի "ColorF1Green": Մարամասները՝ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Yellow" and "ColorF2Yellow".
+KeyNameYellowWarning=KeyboardEvent.key "Yellow" արժեքը հնացել է և կանվանափոխվի "ColorF2Yellow": Մանրամասները՝ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Blue" and "ColorF3Blue".
+KeyNameBlueWarning=KeyboardEvent.key "Blue" արժեքը հնացել է և կանվանափոխվի "ColorF3Blue": Մանրամասները՝ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Live".
+KeyNameLiveWarning=KeyboardEvent.key "Live" արժեքը հնացել է և կանվանափոխվի: Մանրամասները՝ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Apps".
+KeyNameAppsWarning=KeyboardEvent.key "Apps" արժեքը հնացել է և կանվանափոխվի: Մանրամասները՝ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FastFwd" and "MediaFastForward".
+KeyNameFastFwdWarning=KeyboardEvent.key "FastFwd" արժեքը հնացել է և կանվանափոխվի "MediaFastForward": Մանրամասները՝ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Zoom" and "ZoomToggle".
+KeyNameZoomWarning=KeyboardEvent.key "Zoom" արժեքը հնացել է և կանվանափոխվի "ZoomToggle": Մանրամասները՝ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
+KeyNameDeadKeysWarning=KeyboardEvent.key արժեքը, որը սկսում է"Dead"-ով, հնացել է և կմիացվի միայն "Dead"-ով: Մանրամասները՝ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+ImportXULIntoContentWarning=XUL հանգույցների ներմուծումը չի ողջունվում: Այն շուտով կհեռացվի:
