--- a/hy-AM/dom/chrome/layout/htmlparser.properties
+++ b/hy-AM/dom/chrome/layout/htmlparser.properties
@@ -128,3 +128,4 @@ errSelfClosing=Ոչ դատարկ  HTML տարրում օգտագործվել է 
 errNoCheckUnclosedElementsOnStack=Շեղջում չփակված տարրեր:\u0020
 errEndTagDidNotMatchCurrentOpenElement=Վերջնական պիտակ “%1$S”-ը չի համապատասխանում ընթացիկ բաց տարր (“%2$S”)-ի անվան հետ:\u0020
 errEndTagViolatesNestingRules=Վերջնական պիտակ “%1$S”-ը խախտում է ներդրված կանոնները:\u0020
+errEndWithUnclosedElements=Ավարտական պիտակ “%1$S”-ը տեղի էր ունեցել, բայց կային և չփակված տարրեր:                \u0020
