--- a/hy-AM/webapprt/webapprt/overrides/appstrings.properties
+++ b/hy-AM/webapprt/webapprt/overrides/appstrings.properties
@@ -23,6 +23,7 @@ proxyConnectFailure=Ծրագիրը կարգավորված է պրոքսի սպա
 contentEncodingError=Ծրագիրը պատասխան է ստացել սպասարկիչից, որը օգտագրծում է չաջակցվող ձևի սեղմում:
 unsafeContentType=Ծրագիրը չի կարող շարունակել, քանի որ այն փորձում է մուտք ստանալ մի ֆայլի, որը անվտանգ չէ բացել:
 externalProtocolTitle=Հարցվել է արտաքին աշխատակարգ
+externalProtocolPrompt=%1$S: հղումները բացելու համար պահանջվում է այլ հավելված:.\n\n\nՀարցվող հղումը.\n\n%2$S\n\nՀավելվածը. %3$S\n\n\nԵթե չեք սպասում տվյալ հարցմանը, ապա սա կարող է հանդիսանալ խոցելիության օգտագործման փորձ այլ հավելվածում: Չեղարկեք հարցումը, եթե համողված չեք, որ այն վնասակար չէր:\n
 #LOCALIZATION NOTE (externalProtocolUnknown): The following string is shown if the application name can't be determined
 externalProtocolUnknown=<Անհայտ>
 externalProtocolChkMsg=Հիշել կատարված ընտրությունը բոլոր նմանատիպ հղումների համար:
