--- a/hy-AM/dom/chrome/layout/css.properties
+++ b/hy-AM/dom/chrome/layout/css.properties
@@ -21,6 +21,7 @@ PEGatherMediaEOF=մեդիա ցանկի ավարտ @import կամ @media կանո
 PEGatherMediaNotComma=Սպասվում էր ',' մեդիա ցանկում բայց գտնվեց «%1$S»:
 PEGatherMediaNotIdent=Մեդիա ցուցակում սպասվում էր որոշիչ բայց գտնվեց «%1$S»:
 PEGatherMediaReservedMediaType=Գտնվել է պահպանված հիմնաբառ '%1$S'՝ մեդիայի տեսակը դիտելիս:
+PEParseSourceSizeListNotComma=Սպասվում էր  ',' արժեքի վերջում, բայց գտնվեց '%1$S'
 PEImportNotURI=@import կանոնում սպասվում էր URI բայց գտնվեց «%1$S»:
 PEImportBadURI=Սխալ URI ՝ '%1$S'։
 PEImportUnexpected=Գտա անսպասելի «%1$S» @import-ի մեջ:
@@ -44,6 +45,11 @@ PESelectorListExtraEOF=',' կամ '{'
 PESelectorListExtra=Սպասում էի ',' կամ '{' բայց գտա «%1$S»:
 PESelectorGroupNoSelector=Սպասում էի ընտրիչ:
 PESelectorGroupExtraCombinator=Կախված համատեղիչ:
+PECounterStyleNotIdent=@counter-style կանոնի անվանման համար սպասվում էր նույնացուցիչ:
+PECounterStyleBadBlockStart=Սպասվում էր '{' @counter-style կանոնը սկսելու համար, սակայն հայտնաբերվեց '%1$S':
+PECounterDescExpected=Սպասվում էր բնութագրիչ, բայց գնվեց '%1$S':
+PEUnknownCounterDesc=Անհայտ բնութագրիչ '%1$S' @counter-style կանոնում:
+PECounterExtendsNotIdent=Սպասում էի որոշիչ դասի ընտրիչի համար բայց գտնեց '%1$S':
 PEClassSelEOF=դասի անունը
 PEClassSelNotIdent=Սպասում էի որոշիչ դասի ընտրիչի համար բայց գտա «%1$S»:
 PETypeSelEOF=հոդի տեսակը\u0020
