--- a/hy-AM/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/hy-AM/toolkit/chrome/global/devtools/styleinspector.properties
@@ -85,9 +85,11 @@ ruleView.contextmenu.copy.accessKey=C
 
 # LOCALIZATION NOTE (ruleView.contextmenu.copyColor): Text displayed in the rule
 # and computed view context menu when a color value was clicked.
+ruleView.contextmenu.copyColor=Պատճենել գույնը
 
 # LOCALIZATION NOTE (ruleView.contextmenu.copyColor.accessKey): Access key for
 # the rule and computed view context menu "Copy Color" entry.
+ruleView.contextmenu.copyColor.accessKey=L
 
 # LOCALIZATION NOTE (ruleView.contextmenu.showOrigSources): Text displayed in the rule view
 # context menu.
@@ -107,9 +109,11 @@ ruleView.contextmenu.showCSSSources.accessKey=S
 
 # LOCALIZATION NOTE (ruleView.contextmenu.addRule): Text displayed in the
 # rule view context menu for adding a new rule to the element.
+ruleView.contextmenu.addRule=Ավելացնել կանոն
 
 # LOCALIZATION NOTE (ruleView.contextmenu.addRule.accessKey): Access key for
 # the rule view context menu "Add rule" entry.
+ruleView.contextmenu.addRule.accessKey=R
 
 # LOCALIZATION NOTE (computedView.contextmenu.selectAll): Text displayed in the
 # computed view context menu.
