--- a/hy-AM/webapprt/webapprt/webapp.properties
+++ b/hy-AM/webapprt/webapprt/webapp.properties
@@ -42,8 +42,12 @@ webapps.install.install=Տեղադրել ծրագիր
 webapps.install.dontinstall=Չտեղակայել
 # LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
 # of the webapp being uninstalled.
+webapps.uninstall.title=Ապատեղադրել %S-ը
 # LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
 # name of the webapp being uninstalled.
+webapps.uninstall.description=Ցանկանու՞մ եք տեղակայել %S-ը։
+webapps.uninstall.uninstall=Տեղադրել հավելված
+webapps.uninstall.dontuninstall=Չապատեղակայել
 
 paymentDialog.title=Վճար
 paymentDialog.message=Վճարման ո՞ր համակարգն եք նախընտրում:
