[te] update from Pootle (firefox)

--- a/te/security/manager/chrome/pipnss/nsserrors.properties
+++ b/te/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=సంకేతపదం లాకైంది.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=తెలియని PKCS #11 దోషం.
 SEC_ERROR_BAD_CRL_DP_URL=CRL పంపిణీ పాయింట్ పేరు నందు చెల్లని లేదా తోడ్పాటులేని URL.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=సురక్షితం కాని కారణంగా అచేతనపరచిన సిగ్నేచర్ అల్గార్దెమ్ వుపయోగించి యీ ధృవీకరణపత్రం సంతకం చేయబడింది.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=సేవిక కీ పిన్నింగ్ (HPKP) ఉపయోగిస్తోంది అయితే పిన్‌సెట్‌తో పోలే ఏ ట్రస్టెడ్ సర్టిఫికేట్ చైన్ నిర్మించబడలేక పోయింది. కీ పిన్నింగ్ ఉల్లంఘనలు ఓవర్‌రిడెన్ చేయబడలేవు.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=సర్టిఫికేట్ అథారిటీగా గుర్తించబడుతున్న బేసిక్ కన్‌స్ట్రైంట్స్ ఎక్స్‌టెన్షన్ తో గల సర్టిఫికేట్‌ను సేవిక ఉపయోగించును. సరిగా-జారీచేసిన సర్టిఫికేట్ విషయంలో, ఇలా ఉండకూడదు.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=సురక్షిత అనుసంధానం ఏర్పరుచుటకు కావలసినదానికన్నా తక్కువ పరిమాణం గల కీతో వున్న ధృవీకరణపత్రాన్ని సేవిక ఇచ్చినది.
